--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qinchuyun-desktop",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "productName": "秦储云 Desktop",
   "description": "qinchuyun Native Application",
   "main": "src/index.js",
@@ -18,7 +18,8 @@
     "build:webui": "run-s build:webui:*",
     "build:webui:download": "npx ipfs-or-gateway -c QmcFK5PHveeE7F2DBZ3aE5HEqgyH3WN2GAwPP2or6t1tb1 -p assets/webui/ -t 360000 --verbose",
     "build:webui:minimize": "shx rm -rf assets/webui/static/js/*.map && shx rm -rf assets/webui/static/css/*.map",
-    "package": "shx rm -rf dist/ && run-s build && electron-builder --publish onTag"
+    "package": "shx rm -rf dist/ && run-s build && electron-builder --publish onTag",
+    "release":"cross-env  GH_TOKEN=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 electron-builder"
   },
   "pre-commit": [
     "lint"
