--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -71,10 +71,12 @@ snap:
     - network-bind
     - removable-media
   publish:
-    - github
+    provider: generic
+    url: http://127.0.0.1/download/
 
 publish:
-  - github
+  provider: generic
+  url: http://127.0.0.1/download/
 
 protocols:
   - name: IPFS
