--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "qinchuyun-desktop",
+  "name": "QSCloud",
   "private": true,
-  "version": "0.9.0",
-  "productName": "秦储云 desktop",
-  "description": "qinchuyun Native Application",
+  "version": "1.0.0",
+  "productName": "秦储云",
+  "description": "QSCloud Native Application",
   "main": "src/index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development electron .",
@@ -19,6 +19,8 @@
     "build:webui:download": "npx ipfs-or-gateway -c QmcFK5PHveeE7F2DBZ3aE5HEqgyH3WN2GAwPP2or6t1tb1 -p assets/webui/ -t 360000 --verbose",
     "build:webui:minimize": "shx rm -rf assets/webui/static/js/*.map && shx rm -rf assets/webui/static/css/*.map",
     "package": "shx rm -rf dist/ && run-s build && electron-builder",
+    "package:win": "shx rm -rf dist/ && run-s build && electron-builder --win",
+    "package:mac": "shx rm -rf dist/ && run-s build && electron-builder --mac",
     "release":"cross-env  GH_TOKEN=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 electron-builder"
   },
   "pre-commit": [
